# hk-utility-bill-verifier

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: proxy.d.ts
artifacts/api-server/src/routes/: health.ts  index.ts
artifacts/mobile/: app.json
artifacts/mobile/.replit-artifact/: artifact.toml
artifacts/mobile/app/(tabs)/: _layout.tsx  bills.tsx  index.tsx  learn.tsx  regulations.tsx  reports.tsx
artifacts/mobile/constants/: colors.ts
artifacts/mobile/lib/db/: client.ts  schema.ts
artifacts/mobile/types/: domain.ts
docs/decisions/: ADR-001-expo-over-swiftui.md  ADR-002-python-backend.md  ADR-003-field-with-source.md  ADR-004-deterministic-billing.md  ADR-005-append-only-corrections.md  ADR-006-polling-not-websockets.md  ADR-007-hk-only-regulations.md
docs/errors/: journal.md
docs/stages/: stage-01-foundation.md
lib/db/src/schema/: index.ts
python-backend/: main.py  requirements.txt
python-backend/alembic/: env.py
python-backend/alembic/versions/: 7228fab9d799_initial_schema_six_tables.py
python-backend/core/: __init__.py  database.py
python-backend/models/: __init__.py  db_models.py  domain.py
python-backend/routers/: __init__.py  health.py
